cabal-version:       >=1.10
name:                Lisp
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              jagen31
maintainer:          gentner.ja@husky.neu.edu
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Journal
  main-is:             Main.hs
  other-modules:       AST, Parser, Eval
  -- other-extensions:
  build-depends:       mtl, parsec, base >=4.14 && <4.15
  -- hs-source-dirs:
  default-language:    Haskell2010
